--- a/Tutorial-GRMHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRMHD_Equations-Cartesian.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -448,24 +448,25 @@
      "text": [
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[flux[iRho] = mi.alpha*mi.rtDetGamma*rho*u0*vx,\n",
-      " *    flux[ipx] = mi.alpha*mi.gamDDxz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(intE + p/rho + 1.0)),\n",
-      " *    flux[ipy] = mi.alpha*mi.gamDDyz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(intE + p/rho + 1.0)),\n",
-      " *    flux[ipz] = mi.alpha*mi.gamDDzz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(intE + p/rho + 1.0)),\n",
-      " *    flux[ie] = mi.alpha**2*mi.rtDetGamma*(rho*u0**2*vx*(intE + p/rho + 1.0) + mi.betaX*p/mi.alpha**2) - mi.alpha*mi.rtDetGamma*rho*u0*vx]\"\n",
+      " *  \"[flux[iRho] = rhostar*vU0,\n",
+      " *    flux[ipx] = mi.alpha*mi.gamDDxz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
+      " *    flux[ipy] = mi.alpha*mi.gamDDyz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
+      " *    flux[ipz] = mi.alpha*mi.gamDDzz*mi.rtDetGamma*(p*((mi.gamDDxy*mi.gamDDyz - mi.gamDDxz*mi.gamDDyy)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*mi.gamDDyz**2 - mi.gamDDxy**2*mi.gamDDzz + 2*mi.gamDDxy*mi.gamDDxz*mi.gamDDyz - mi.gamDDxz**2*mi.gamDDyy) - 1.0*mi.betaX*mi.betaZ/mi.alpha**2) + rho*u0**2*vx*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
+      " *    flux[ie] = mi.alpha**2*mi.rtDetGamma*(rhostar*u0*vx*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + mi.betaX*p/mi.alpha**2) - rhostar*vU0]\"\n",
       " */\n",
       "{\n",
-      "   const double tmp0 = (mi.alpha*mi.rtDetGamma)*(rho*u0*vx);\n",
-      "   const double tmp1 = (rho*vx)*(pow(u0, 2)*(intE + p/rho + 1.0));\n",
-      "   const double tmp2 = pow(mi.alpha, 2);\n",
-      "   const double tmp3 = mi.betaX/tmp2;\n",
-      "   const double tmp4 = mi.gamDDxy*mi.gamDDyz;\n",
-      "   const double tmp5 = mi.alpha*mi.rtDetGamma*(p*(-1.0*mi.betaZ*tmp3 + (-mi.gamDDxz*mi.gamDDyy + tmp4)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*pow(mi.gamDDyz, 2) - pow(mi.gamDDxy, 2)*mi.gamDDzz - pow(mi.gamDDxz, 2)*mi.gamDDyy + 2*mi.gamDDxz*tmp4)) + tmp1*vz);\n",
+      "   const double tmp0 = rhostar*vU0;\n",
+      "   const double tmp1 = gamma1 - 1;\n",
+      "   const double tmp2 = vx*(pow(c, 2) + cs2_0*pow(rho/rho_0, tmp1)/tmp1);\n",
+      "   const double tmp3 = pow(mi.alpha, 2);\n",
+      "   const double tmp4 = mi.betaX/tmp3;\n",
+      "   const double tmp5 = mi.gamDDxy*mi.gamDDyz;\n",
+      "   const double tmp6 = mi.alpha*mi.rtDetGamma*(p*(-1.0*mi.betaZ*tmp4 + (-mi.gamDDxz*mi.gamDDyy + tmp5)/(mi.gamDDxx*mi.gamDDyy*mi.gamDDzz - mi.gamDDxx*pow(mi.gamDDyz, 2) - pow(mi.gamDDxy, 2)*mi.gamDDzz - pow(mi.gamDDxz, 2)*mi.gamDDyy + 2*mi.gamDDxz*tmp5)) + rho*tmp2*pow(u0, 2)*vz);\n",
       "   flux[iRho] = tmp0;\n",
-      "   flux[ipx] = mi.gamDDxz*tmp5;\n",
-      "   flux[ipy] = mi.gamDDyz*tmp5;\n",
-      "   flux[ipz] = mi.gamDDzz*tmp5;\n",
-      "   flux[ie] = mi.rtDetGamma*tmp2*(p*tmp3 + tmp1) - tmp0;\n",
+      "   flux[ipx] = mi.gamDDxz*tmp6;\n",
+      "   flux[ipy] = mi.gamDDyz*tmp6;\n",
+      "   flux[ipz] = mi.gamDDzz*tmp6;\n",
+      "   flux[ie] = mi.rtDetGamma*tmp3*(p*tmp4 + rhostar*tmp2*u0/(mi.alpha*mi.rtDetGamma)) - tmp0;\n",
       "}\n",
       "\n"
      ]
@@ -476,6 +477,8 @@
     "TmunuUU[0][0] = rho*h*u0*u0 + p/(lapse*lapse)\n",
     "for i in range(3):\n",
     "    TmunuUU[0][i+1] = rho*h*u0*uvecU[i] + p/(lapse*lapse)*shiftU[i]\n",
+    "    TmunuUU[i+1][0] = rho*h*u0*uvecU[i] + p/(lapse*lapse)*shiftU[i]\n",
+    "\n",
     "for i in range(3):\n",
     "    for j in range(i,3):\n",
     "        TmunuUU[i+1][j+1] = rho*h*uvecU[i]*uvecU[j] + p*(gammaUU[i][j] - 1./(lapse*lapse)*shiftU[i]*shiftU[j])\n",
@@ -541,12 +544,20 @@
     "\\begin{equation}\n",
     "g_{\\mu\\nu} x^{\\mu} x^{\\nu} = g_{\\mu\\nu} \\mathcal{R}^{-1\\mu}_{\\alpha}x'^{\\alpha} \\mathcal{R}^{-1\\nu}_{\\beta}x'^{\\beta} = g_{\\alpha\\beta} \\mathcal{R}^{-1\\alpha}_{\\mu}\\mathcal{R}^{-1\\beta}_{\\nu}x'^{\\mu} x'^{\\nu} \\rightarrow g'_{\\mu\\nu} = g_{\\alpha\\beta} \\mathcal{R}^{-1\\alpha}_{\\mu}\\mathcal{R}^{-1\\beta}_{\\nu},\n",
     "\\end{equation}\n",
-    "which gives us the appropriate rotated metric.  This is the same for $T^{\\mu\\nu}$."
+    "which gives us the appropriate rotated metric.  \n",
+    "To get the similar transformation for $T^{\\mu\\nu}$, we note the $T = T^{\\mu}_{\\mu} = g_{\\mu\\nu}T^{\\mu\\nu}$ tranforms as a scalar.  So we have\n",
+    "\\begin{equation}\n",
+    "T = g_{\\mu\\nu}T^{\\mu\\nu} = g_{\\alpha\\beta}\\mathcal{R}^{-1,\\alpha}_{\\gamma}\\mathcal{R}^{-1,\\beta}_{\\delta}\\mathcal{R}^{\\gamma}_{\\mu}\\mathcal{R}^{\\delta}_{\\nu} T^{\\mu\\nu} = \\rightarrow g'_{\\mu\\nu} T'^{\\mu\\nu}\n",
+    "\\end{equation}\n",
+    "which provide the identity\n",
+    "\\begin{equation}\n",
+    "T'^{\\mu\\nu} = \\mathcal{R}^{\\mu}_{\\alpha}\\mathcal{R}^{\\nu}_{\\beta} T^{\\alpha\\beta}\n",
+    "\\end{equation}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -566,12 +577,39 @@
       "   gmunu01 = tmp1;\n",
       "   gmunu10 = tmp1;\n",
       "}\n",
+      "\n",
+      "/*\n",
+      " *  Original SymPy expressions:\n",
+      " *  \"[Tmunu00 = 1.0*p/mi.alpha**2 + 1.0*rhostar**2*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha**2*mi.rtDetGamma**2*rho),\n",
+      " *    Tmunu12 = n0[0]*(1.0*rhostar*u0*vx*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + 1.0*mi.betaX*p/mi.alpha**2) + n0[1]*(1.0*rhostar*u0*vy*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + 1.0*mi.betaY*p/mi.alpha**2) + n0[2]*(1.0*rhostar*u0*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + 1.0*mi.betaZ*p/mi.alpha**2),\n",
+      " *    Tmunu21 = 1.0*n0[0]*(rhostar*u0*vx*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + mi.betaX*p/mi.alpha**2) + 1.0*n0[1]*(rhostar*u0*vy*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + mi.betaY*p/mi.alpha**2) + 1.0*n0[2]*(rhostar*u0*vz*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))/(mi.alpha*mi.rtDetGamma) + mi.betaZ*p/mi.alpha**2)]\"\n",
+      " */\n",
+      "{\n",
+      "   const double tmp0 = pow(mi.alpha, -2);\n",
+      "   const double tmp1 = p*tmp0;\n",
+      "   const double tmp2 = 1.0*tmp1;\n",
+      "   const double tmp3 = gamma1 - 1;\n",
+      "   const double tmp4 = pow(c, 2) + cs2_0*pow(rho/rho_0, tmp3)/tmp3;\n",
+      "   const double tmp5 = rhostar*tmp4*u0/(mi.alpha*mi.rtDetGamma);\n",
+      "   const double tmp6 = tmp5*vx;\n",
+      "   const double tmp7 = tmp5*vy;\n",
+      "   const double tmp8 = tmp5*vz;\n",
+      "   Tmunu00 = tmp2 + 1.0*pow(rhostar, 2)*tmp0*tmp4/(pow(mi.rtDetGamma, 2)*rho);\n",
+      "   Tmunu12 = n0[0]*(mi.betaX*tmp2 + 1.0*tmp6) + n0[1]*(mi.betaY*tmp2 + 1.0*tmp7) + n0[2]*(mi.betaZ*tmp2 + 1.0*tmp8);\n",
+      "   Tmunu21 = 1.0*n0[0]*(mi.betaX*tmp1 + tmp6) + 1.0*n0[1]*(mi.betaY*tmp1 + tmp7) + 1.0*n0[2]*(mi.betaZ*tmp1 + tmp8);\n",
+      "}\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "RotInvUD = ixp.declarerank2(\"RotUD\", \"nosym\", DIM=4)\n",
+    "RotUD = ixp.declarerank2(\"RotUD\", \"nosym\", DIM=4)\n",
+    "RotInvUD = ixp.declarerank2(\"RotInvUD\", \"nosym\", DIM=4)\n",
+    "\n",
+    "#declare normal primed vectors for rotation\n",
+    "n00, n01, n02 = sp.symbols(\"n0[0] n0[1] n0[2]\")\n",
+    "n10, n11, n12 = sp.symbols(\"n1[0] n1[1] n1[2]\")\n",
+    "n20, n21, n22 = sp.symbols(\"n2[0] n2[1] n2[2]\")\n",
     "\n",
     "#declare normal primed vectors for inverse rotation\n",
     "n0p0, n0p1, n0p2 = sp.symbols(\"n0p[0] n0p[1] n0p[2]\")\n",
@@ -579,9 +617,23 @@
     "n2p0, n2p1, n2p2 = sp.symbols(\"n2p[0] n2p[1] n2p[2]\")\n",
     "\n",
     "for i in range(4):\n",
+    "    RotUD[0][i] = 0.\n",
+    "    RotUD[i][0] = 0.\n",
     "    RotInvUD[0][i] = 0.\n",
     "    RotInvUD[i][0] = 0.\n",
+    "\n",
+    "RotUD[0][0] = 1.\n",
     "RotInvUD[0][0] = 1.\n",
+    "\n",
+    "RotUD[1][1] = n00\n",
+    "RotUD[1][2] = n01\n",
+    "RotUD[1][3] = n02\n",
+    "RotUD[2][1] = n10\n",
+    "RotUD[2][2] = n11\n",
+    "RotUD[2][3] = n12\n",
+    "RotUD[3][1] = n20\n",
+    "RotUD[3][2] = n21\n",
+    "RotUD[3][3] = n22\n",
     "\n",
     "RotInvUD[1][1] = n0p0\n",
     "RotInvUD[1][2] = n0p1\n",
@@ -604,7 +656,22 @@
     "\n",
     "str = outputC([gmunuRotDD[0][0], gmunuRotDD[1][2], gmunuRotDD[2][1]], [\"gmunu00\", \"gmunu01\", \"gmunu10\"], filename=\"returnstring\")\n",
     "\n",
-    "print str"
+    "print str\n",
+    "\n",
+    "# provie\n",
+    "\n",
+    "TmunuRotUU = ixp.declarerank2(\"TmunuRotUU\", \"sym01\", DIM=4)\n",
+    "\n",
+    "for i in range(4) :\n",
+    "    for j in range(4) :\n",
+    "        TmunuRotUU[i][j] = 0.\n",
+    "        for k in range(4) :\n",
+    "            for l in range(4) :\n",
+    "                TmunuRotUU[i][j] += TmunuUU[l][k]*RotUD[i][l]*RotUD[j][k]\n",
+    "\n",
+    "str = outputC([TmunuRotUU[0][0], TmunuRotUU[0][1], TmunuRotUU[1][0]], [\"Tmunu00\", \"Tmunu12\", \"Tmunu21\"], filename=\"returnstring\")\n",
+    "\n",
+    "print str\n"
    ]
   },
   {
@@ -637,9 +704,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/*\n",
+      " *  Original SymPy expression:\n",
+      " *  \"rootRho = con[iSx]**2*mi.gamDDxx + 2*con[iSx]*con[iSy]*mi.gamDDxy + 2*con[iSx]*con[iSz]*mi.gamDDxz + con[iSy]**2*mi.gamDDyy + 2*con[iSy]*con[iSz]*mi.gamDDyz + con[iSz]**2*mi.gamDDzz + mi.alpha**2*mi.rtDetGamma**2*rho**2*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))**2 + rhostar*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))**2*(-mi.alpha**2 + mi.betaX**2*mi.gamDDxx + 2*mi.betaX*mi.betaY*mi.gamDDxy + 2*mi.betaX*mi.betaZ*mi.gamDDxz + mi.betaY**2*mi.gamDDyy + 2*mi.betaY*mi.betaZ*mi.gamDDyz + mi.betaZ**2*mi.gamDDzz) + rhostar*(2*c**2 + 2*cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))*(con[iSx]*mi.betaX*mi.gamDDxx + con[iSx]*mi.betaY*mi.gamDDxy + con[iSx]*mi.betaZ*mi.gamDDxz + con[iSy]*mi.betaX*mi.gamDDxy + con[iSy]*mi.betaY*mi.gamDDyy + con[iSy]*mi.betaZ*mi.gamDDyz + con[iSz]*mi.betaX*mi.gamDDxz + con[iSz]*mi.betaY*mi.gamDDyz + con[iSz]*mi.betaZ*mi.gamDDzz)\"\n",
+      " */\n",
+      "{\n",
+      "   const double tmp0 = con[iSx]*mi.gamDDxy;\n",
+      "   const double tmp1 = 2*con[iSz];\n",
+      "   const double tmp2 = con[iSx]*mi.gamDDxz;\n",
+      "   const double tmp3 = con[iSy]*mi.gamDDyz;\n",
+      "   const double tmp4 = pow(mi.alpha, 2);\n",
+      "   const double tmp5 = pow(c, 2);\n",
+      "   const double tmp6 = gamma1 - 1;\n",
+      "   const double tmp7 = cs2_0*pow(rho/rho_0, tmp6)/tmp6;\n",
+      "   const double tmp8 = pow(tmp5 + tmp7, 2);\n",
+      "   const double tmp9 = mi.betaX*mi.gamDDxy;\n",
+      "   const double tmp10 = 2*mi.betaZ;\n",
+      "   const double tmp11 = mi.betaX*mi.gamDDxz;\n",
+      "   const double tmp12 = mi.betaY*mi.gamDDyz;\n",
+      "   rootRho = pow(con[iSx], 2)*mi.gamDDxx + pow(con[iSy], 2)*mi.gamDDyy + 2*con[iSy]*tmp0 + pow(con[iSz], 2)*mi.gamDDzz + pow(mi.rtDetGamma, 2)*pow(rho, 2)*tmp4*tmp8 + rhostar*tmp8*(pow(mi.betaX, 2)*mi.gamDDxx + pow(mi.betaY, 2)*mi.gamDDyy + 2*mi.betaY*tmp9 + pow(mi.betaZ, 2)*mi.gamDDzz + tmp10*tmp11 + tmp10*tmp12 - tmp4) + rhostar*(2*tmp5 + 2*tmp7)*(con[iSx]*mi.betaX*mi.gamDDxx + con[iSy]*mi.betaY*mi.gamDDyy + con[iSy]*tmp9 + con[iSz]*mi.betaZ*mi.gamDDzz + con[iSz]*tmp11 + con[iSz]*tmp12 + mi.betaY*tmp0 + mi.betaZ*tmp2 + mi.betaZ*tmp3) + tmp1*tmp2 + tmp1*tmp3;\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "DIM = 3\n",
     "# Declare rank-1 contravariant (\"v\") vector\n",
@@ -695,9 +790,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/*\n",
+      " *  Original SymPy expressions:\n",
+      " *  \"[vx = con[iSx]/(rhostar*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
+      " *    vy = con[iSy]/(rhostar*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1))),\n",
+      " *    vz = con[iSz]/(rhostar*(c**2 + cs2_0*(rho/rho_0)**(gamma1 - 1)/(gamma1 - 1)))]\"\n",
+      " */\n",
+      "{\n",
+      "   const double tmp0 = gamma1 - 1;\n",
+      "   const double tmp1 = 1/(rhostar*(pow(c, 2) + cs2_0*pow(rho/rho_0, tmp0)/tmp0));\n",
+      "   vx = con[iSx]*tmp1;\n",
+      "   vy = con[iSy]*tmp1;\n",
+      "   vz = con[iSz]*tmp1;\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#rhostar = sp.symbols(\"rhostar\")\n",
     "#StildeU = ixp.declarerank1(\"StildeU\")\n",
