--- a/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
@@ -144,12 +144,12 @@
     "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "Here, we will calculate the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$."
+    "Here, we will calculate the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$. Conveniently, in flat space, the drift velocity reduces to the Valencia velocity because $\\alpha = 1$ and $\\beta^i = 0$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +166,80 @@
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            ValenciavU[i] += LeviCivitaSymbolDDD[i][j][k] * Omega_aligned_rotator * unit_zU[j] * xx[k]"
+    "            ValenciavU[i] += LeviCivitaSymbolDDD[i][j][k] * Omega_aligned_rotator * unit_zU[j] * rfm.xx[k]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NRPy+ Module Code Validation\n",
+    "\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Aligned Rotator initial data equations  we intend to use between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ [GiRaFFEfood_HO_Aligned_Rotator.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Aligned_Rotator.py) module.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warnings below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::B_p_aligned_rotator\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::R_NS_aligned_rotator\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::Omega_aligned_rotator\n",
+      "^^^ Ignore the minor warnings above. ^^^\n",
+      "\n",
+      "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
+      "AD[0] - gfho.AD[0] = 0\n",
+      "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
+      "AD[1] - gfho.AD[1] = 0\n",
+      "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
+      "AD[2] - gfho.AD[2] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reset the list of gridfunctions, as registering a gridfunction\n",
+    "#   twice will spawn an error.\n",
+    "gri.glb_gridfcs_list = []\n",
+    "\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
+    "\n",
+    "import GiRaFFEfood_HO.GiRaFFEfood_HO_Aligned_Rotator as gfho\n",
+    "gfho.GiRaFFEfood_HO_Aligned_Rotator()\n",
+    "\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
+    "\n",
+    "print(\"Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "\n",
+    "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
+    "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
