--- a/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
+++ b/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "## This module sets up Shifted Kerr-Schild initial data ([Etienne et al., 2017 GiRaFFE](https://arxiv.org/pdf/1704.00599.pdf)).\n",
     "\n",
-    "### NRPy+ Source Code for this module: [BSSN/BrillLindquist.py](../edit/BSSN/BrillLindquist.py)\n",
+    "### NRPy+ Source Code for this module: [BSSN/ShiftedKerrSchild.py](../edit/BSSN/ShiftedKerrSchild.py)\n",
     "\n",
-    "<font color='green'>**All quantities have been validated against the [original SENR code](https://bitbucket.org/zach_etienne/nrpy).**</font>\n",
+    "<font color='red'>**WARNING: This module has not yet passed code validation testing.**</font>\n",
     "\n",
     "<a id='top'></a>$$\\label{top}$$\n",
     "\n",
@@ -75,8 +75,7 @@
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
     "# Input parameters:\n",
-    "M = par.Cparameters(\"REAL\", thismodule, [\"M\"])\n",
-    "a = par.Cparameters(\"REAL\", thismodule, [\"a\"])\n",
+    "M, a = par.Cparameters(\"REAL\", thismodule, [\"M\", \"a\"])\n",
     "\n",
     "# Auxiliary variables:\n",
     "rho2 = sp.symbols('rho2', real=True)"
@@ -132,14 +131,13 @@
     "# alpha = 1/sqrt{1 + Mr/rho^2}\n",
     "alphaSph = 1/(sp.sqrt(1 + 2*M*r/rho2))\n",
     "\n",
+    "# Initialize the shift vector, \\beta^i, to zero.\n",
     "betaSphU = ixp.zerorank1()\n",
     "# beta^r = alpha^2*2Mr/rho^2\n",
     "betaSphU[0] = alphaSph*alphaSph*2*M*r/rho2\n",
-    "           \n",
-    "# beta^{theta} = beta^{phi} = gamma_{r theta} = gamma_{theta phi}\n",
-    "BSphU = ixp.zerorank1()\n",
-    "              \n",
-    "gammaSphDD = ixp.zerorank2()"
+    "\n",
+    "# Time derivative of shift vector beta^i, B^i, is zero.\n",
+    "BSphU = ixp.zerorank1()"
    ]
   },
   {
@@ -151,7 +149,7 @@
     "## Step 2.2: Define and construct nonzero components $\\gamma_{rr}$, $\\gamma_{r\\phi}$, $\\gamma_{\\theta\\theta}$, $\\gamma_{\\phi\\phi}$ \\[Back to [top](#top)\\]\n",
     "$$\\label{step2p2}$$\n",
     "\n",
-    "From equations (A.4)-(A.7) we define the nonzero components of the 3-metric:\n",
+    "From equations (A.4)-(A.7) of [Etienne et al., 2017](https://arxiv.org/pdf/1704.00599.pdf) we define the nonzero components of the 3-metric:\n",
     "\n",
     "<br>\n",
     "\n",
@@ -176,6 +174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize \\gamma_{ij} to zero.\n",
+    "gammaSphDD = ixp.zerorank2()\n",
+    "\n",
     "# gammaDD{r r} = 1 +2Mr/rho^2\n",
     "gammaSphDD[0][0] = 1 + 2*M*r/rho2\n",
     "\n",
@@ -199,7 +200,7 @@
     "\n",
     "$$\\label{step3p1}$$\n",
     "\n",
-    "From equations (A.8)-(A.10) we define the following expressions which will help simplify the nonzero extrinsic curvature components:\n",
+    "From equations (A.8)-(A.10) of [Etienne et al., 2017](https://arxiv.org/pdf/1704.00599.pdf) we define the following expressions which will help simplify the nonzero extrinsic curvature components:\n",
     "\n",
     "<br>\n",
     "\n",
@@ -242,7 +243,7 @@
     "$$\\label{step3p2}$$\n",
     "We will now express the extrinsic curvature $K_{ij}$ in spherical polar coordinates.\n",
     "\n",
-    "From equations (A.11) - (A.13) we define the following:\n",
+    "From equations (A.11) - (A.13) of [Etienne et al., 2017](https://arxiv.org/pdf/1704.00599.pdf) we define the following:\n",
     "\n",
     "$$ K_{rr} = \\frac{D(A + 2Mr)}{A^{2}B}\\left[4M\\left(a^{2}\\cos(2\\theta) + a^{2} - 2r^{2}\\right)\\right] $$\n",
     "\n",
@@ -282,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And from equations (A.14) - (A.17) we define the following expressions to complete the upper-triangular matrix $K_{ij}$:\n",
+    "And from equations (A.14) - (A.17) of [Etienne et al., 2017](https://arxiv.org/pdf/1704.00599.pdf) we define the following expressions to complete the upper-triangular matrix $K_{ij}$:\n",
     "\n",
     "$$ K_{\\theta\\theta} = \\frac{D}{B}\\left[4Mr^{2}\\right] $$\n",
     "\n",
@@ -413,31 +414,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb to latex\n",
-      "[NbConvertApp] Writing 43355 bytes to Tutorial-ADM_Initial_Data-ShiftedKerrSchild.tex\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.20 (MiKTeX 2.9.6960 64-bit)\n",
+      "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb to latex\n",
+      "[NbConvertApp] Writing 43479 bytes to Tutorial-ADM_Initial_Data-ShiftedKerrSchild.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
       "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.20 (MiKTeX 2.9.6960 64-bit)\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
       "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.20 (MiKTeX 2.9.6960 64-bit)\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
       "entering extended mode\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'rm' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
      ]
     }
    ],
@@ -452,21 +442,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
